e2e/tests/all/snapshots/button_group_rest_mobile_dark.snap
---
source: e2e/src/suite.rs
description: "button_group at mobile (rest, dark)"
expression: tree
---
group "Outlined"
  button "One"
    StaticText "One"
  button "Two"
    StaticText "Two"
  button "Three"
    StaticText "3"
group "Filled"
  button "One"
    StaticText "One"
  button "Two"
    StaticText "Two"
group "Mixed"
  button "Wrapped"
    StaticText "Wrapped"
  button "Switch to right-to-left text"
  group "Theme"
    button "Switch to the light theme"
    button "Choose a theme" [expanded=false] [haspopup=menu]
group "Disabled"
  button "Off" [disabled]
    StaticText "Off"
  button "On"
    StaticText "On"
group "Vertical"
  button "Top"
    StaticText "Top"
  button "Middle"
    StaticText "Middle"
  button "Bottom"
    StaticText "Bottom"
group "Pair"
  group "Theme"
    button "Switch to the light theme"
    button "Choose a theme" [expanded=false] [haspopup=menu]
  button "After"
    StaticText "After"
group "Hidden in"
  button "Shown"
    StaticText "Shown"
group "Hidden out"
  button "Shown"
    StaticText "Shown"
group "Vertical mixed"
  button "A wider label"
    StaticText "A wider label"
  button "Two"
    StaticText "2"
  button "Three"
    StaticText "3"
  group "Theme"
    button "Switch to the light theme"
    button "Choose a theme" [expanded=false] [haspopup=menu]
