e2e/tests/all/snapshots/button_rest_desktop.snap
---
source: e2e/src/suite.rs
description: button at desktop (rest)
expression: tree
---
button "Plain"
  StaticText "Plain"
button "Busy" [busy=1] [disabled]
  StaticText "Busy"
paragraph
  StaticText "Plain 0, busy 0"
link "Go to landing"
  StaticText "Go to landing"
button "Outlined"
  StaticText "Outlined"
button "Standard"
  StaticText "Standard"
button "Elevated"
  StaticText "Elevated"
button "Filled"
  StaticText "Filled"
button "Yellow"
  StaticText "Yellow"
button "Navy"
  StaticText "Navy"
button "Gold"
  StaticText "Gold"
link "Disabled link" [disabled]
  StaticText "Disabled link"
form
  textbox "Field"
    generic
  button "Send" [busy=1] [disabled]
    StaticText "Send"
    generic
button "Save every change made to this rather long document title"
  StaticText "Save every change made to this rather long document title"
button "Search"
  generic
  StaticText "Search"
  generic
button "Blue"
  generic
button "Save"
  image
  StaticText "Save"
button "Bold" [pressed=false]
  StaticText "Bold"
button "Bold" [pressed]
  StaticText "Bold"
button "Bold" [pressed=false]
  StaticText "Bold"
button "Bold" [pressed]
  StaticText "Bold"
button "Bold" [pressed=false]
  StaticText "Bold"
button "Bold" [pressed]
  StaticText "Bold"
button "Bold" [pressed=false]
  StaticText "Bold"
button "Bold" [pressed]
  StaticText "Bold"
button "Bold" [pressed=false]
  StaticText "Bold"
button "Bold" [pressed]
  StaticText "Bold"
button "Inbox 3" [pressed=false]
  StaticText "Inbox"
  StaticText "3"
button "Inbox 3 NEW" [pressed]
  StaticText "Inbox"
  StaticText "3"
  StaticText "NEW"
