e2e/tests/all/snapshots/button_rest_mobile.snap
---
source: e2e/src/suite.rs
description: button at mobile (rest)
expression: tree
---
button "Plain"
  StaticText "Plain"
button "Busy" [busy=1] [disabled]
  StaticText "Busy"
paragraph
  StaticText "Plain 0, busy 0"
link "Go to landing"
  StaticText "Go to landing"
button "Outlined"
  StaticText "Outlined"
button "Standard"
  StaticText "Standard"
button "Elevated"
  StaticText "Elevated"
button "Filled"
  StaticText "Filled"
link "Disabled link" [disabled]
  StaticText "Disabled link"
form
  textbox "Field"
    generic
  button "Send" [busy=1] [disabled]
    StaticText "Send"
    generic
button "Save every change made to this rather long document title"
  StaticText "Save every change made to this rather long document title"
button "Search"
  generic
  StaticText "Search"
  generic
button "Blue"
  generic
button "Save"
  image
  StaticText "Save"
button "Bold" [pressed=false]
  StaticText "Bold"
button "Bold" [pressed]
  StaticText "Bold"
button "Bold" [pressed=false]
  StaticText "Bold"
button "Bold" [pressed]
  StaticText "Bold"
button "Bold" [pressed=false]
  StaticText "Bold"
button "Bold" [pressed]
  StaticText "Bold"
button "Bold" [pressed=false]
  StaticText "Bold"
button "Bold" [pressed]
  StaticText "Bold"
button "Bold" [pressed=false]
  StaticText "Bold"
button "Bold" [pressed]
  StaticText "Bold"
