e2e/tests/all/snapshots/calendar-mini_rest_mobile.snap
---
source: e2e/src/suite.rs
description: calendar-mini at mobile (rest)
expression: tree
---
button "Before"
  StaticText "Before"
button "Previous days"
grid "March 2026"
  row "March 18, 2026 March 19, 2026 March 20, 2026 March 21, 2026 March 22, 2026 March 23, 2026 March 24, 2026"
    gridcell "March 18, 2026" [selected]
      button "March 18, 2026" [current=date]
        StaticText "Mar"
        StaticText "18"
    gridcell "March 19, 2026" [selected=false]
      button "March 19, 2026"
        StaticText "Mar"
        StaticText "19"
    gridcell "March 20, 2026" [selected=false]
      button "March 20, 2026"
        StaticText "Mar"
        StaticText "20"
    gridcell "March 21, 2026" [selected=false]
      button "March 21, 2026"
        StaticText "Mar"
        StaticText "21"
    gridcell "March 22, 2026" [selected=false]
      button "March 22, 2026"
        StaticText "Mar"
        StaticText "22"
    gridcell "March 23, 2026" [selected=false]
      button "March 23, 2026"
        StaticText "Mar"
        StaticText "23"
    gridcell "March 24, 2026" [selected=false]
      button "March 24, 2026"
        StaticText "Mar"
        StaticText "24"
button "Next days"
button "After"
  StaticText "After"
